added bookmark feature (pt 1)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -288,5 +288,7 @@
     <string name="md_presets_label">Presets</string>
     <string name="changelog">Changelog</string>
     <string name="scroll_top">Scroll to top</string>
+    <string name="add_bookmark">Add bookmark</string>
+    <string name="remove_bookmark">Remove bookmark</string>
 
 </resources>
