--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -143,7 +143,7 @@
     <string name="download_section_older">30日以上前</string>
     <string name="download_details_not_found">「%s」というパッケージ名のモジュールはレポジトリに存在しません。</string>
     <string name="download_no_versions">開発者がまだモジュールを公開していません。</string>
-    <string name="download_test_version_not_shown">テストバージョンがありますが、グローバル設定やモジュール別の設定によって表示されていません。</string>
+    <string name="download_test_version_not_shown">テストバージョンがありますが、グローバル設定やモジュールごとの設定によって表示されていません。</string>
 
     <!-- Settings tab -->
     <string name="settings_group_installation">インストール</string>
@@ -258,7 +258,7 @@
     <string name="downloadUninstaller">アンインストーラ</string>
     <string name="selectFile">ダウンロードしたファイルを選択</string>
     <string name="xposedZipNotFound">zipが見つかりません、おそらく新しいバージョンがリリースされています。</string>
-    <string name="warningArchitecture">正しいXposedのzipのアーキテクチャを選択しましたか？?\n異なるインストーラzipは携帯電話に損害を与える可能性があります。</string>
+    <string name="warningArchitecture">正しいXposedのzipのアーキテクチャを選択しましたか？\n異なるインストーラzipは携帯電話に損害を与える可能性があります。</string>
     <string name="help">ヘルプ</string>
     <string name="helpChoose">
         適切なzipの選び方:\n
@@ -287,6 +287,13 @@
     <string name="md_custom_label">カスタム</string>
     <string name="md_presets_label">プリセット</string>
     <string name="changelog">更新履歴</string>
-    <string name="scroll_top">最上部にスクロール</string>
+    <string name="scroll_top">トップにスクロール</string>
+    <string name="add_bookmark">ブックマークを追加</string>
+    <string name="remove_bookmark">ブックマークを削除</string>
+    <string name="bookmarks">ブックマーク</string>
+    <string name="no_bookmark_added">ブックマークが追加されていません</string>
+    <string name="bookmark_added">ブックマークを追加しました</string>
+    <string name="bookmark_removed">ブックマークを削除しました</string>
+    <string name="undo">元に戻す</string>
 
 </resources>
