--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -295,5 +295,6 @@
     <string name="bookmark_added">ブックマークを追加しました</string>
     <string name="bookmark_removed">ブックマークを削除しました</string>
     <string name="undo">元に戻す</string>
+    <string name="notification_coloration">通知アイコンを色付け</string>
 
 </resources>
