--- a/app/src/main/res/values-sk/strings.xml
+++ b/app/src/main/res/values-sk/strings.xml
@@ -295,5 +295,6 @@
     <string name="bookmark_added">Záložka pridaná</string>
     <string name="bookmark_removed">Záložka odstránená</string>
     <string name="undo">Späť</string>
+    <string name="notification_coloration">Zafarbiť ikonu upozornenia</string>
 
 </resources>
