--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -299,5 +299,7 @@
     <string name="file_is_empty">File is empty</string>
     <string name="install_with_su">Install module with root</string>
     <string name="install_with_su_summ">If checked Xposed Installer will install modules without a prompt</string>
+    <string name="install_remove">Install and remove</string>
+    <string name="download_remove">Download and remove</string>
 
 </resources>
