--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -301,5 +301,6 @@
     <string name="install_with_su_summ">If checked Xposed Installer will install modules without a prompt</string>
     <string name="install_remove">Install and remove</string>
     <string name="download_remove">Download and remove</string>
+    <string name="module_saved">Module saved at %1$s</string>
 
 </resources>
