--- a/app/src/main/res/values-sk/strings.xml
+++ b/app/src/main/res/values-sk/strings.xml
@@ -302,5 +302,8 @@
     <string name="install_remove">Nainštalovať a odstrániť</string>
     <string name="download_remove">Stiahnuť a odstrániť</string>
     <string name="module_saved">Modul uložený %1$s</string>
+    <string name="ignore_updates">Ignorovať auktualizácie</string>
+    <string name="ignore_updates_summ">Ignorovať auktualizácie pre konkrétny modul.</string>
+    <string name="reboot_recovery">Reštartovať do recovery</string>
 
 </resources>
