--- a/app/src/main/res/values-ca/strings.xml
+++ b/app/src/main/res/values-ca/strings.xml
@@ -45,16 +45,16 @@
     <string name="install_header_reboot">Reinicia</string>
     <string name="soft_reboot">Reinici ràpid</string>
     <string name="reboot">Reinicia</string>
-    <string name="areyousure">N'esteu segur?</string>
+    <string name="areyousure">N\'esteu segur?</string>
     <string name="phone_not_compatible">L'Xposed (encara) no és compatible amb Android SDK versió %1$d o l'arquitectura del processador (%2$s).</string>
     <string name="not_tested_but_compatible">L'Xposed no s'ha provat amb Android SDK versió %d, peró sembla compatible. Podeu provar d'instal·lar-lo si voleu córrer el risc.</string>
     <string name="reboot_failed">Ha fallat el reinici. Utilitzeu la funció normal de reinici del dispositiu.</string>
-    <string name="auto_flash_note">S'hauria d'instal·lar automàticament %s quan premeu "D'acord".</string>
+    <string name="auto_flash_note">S\'hauria d'instal·lar automàticament %s quan premeu "D'acord".</string>
     <string name="manual_flash_note">Instal·leu %s des de la targeta SD card per acabar l'operació.</string>
     <string name="reboot_confirmation">Voleu reiniciar ara?</string>
     <string name="reboot_recovery_confirmation">Voleu reiniciar en mode recuperació ara?</string>
     <string name="install_warning_title">Compte!</string>
-    <string name="install_warning">Alguna vegada pot ser que el dispositiu no s'iniciï després d\'instal·lar l\'Xposed.\n\nSi no heu sentit mai els termes \"soft brick\" i \"bootloop\" o no sabeu com recuperar-vos d\'aquestes situacions, <b>NO</b> instal·leu l\'Xposed!\n\nEn tot cas, és altament recomanable tenir una còpia de seguretat recent.</string>
+    <string name="install_warning">Alguna vegada pot ser que el dispositiu no s\'iniciï després d\'instal·lar l\'Xposed.\n\nSi no heu sentit mai els termes \"soft brick\" i \"bootloop\" o no sabeu com recuperar-vos d\'aquestes situacions, <b>NO</b> instal·leu l\'Xposed!\n\nEn tot cas, és altament recomanable tenir una còpia de seguretat recent.</string>
     <string name="dont_show_again">No ho tornis a mostrar</string>
     <string name="install_known_issue">Sembla que hi ha un problema conegut (\"%s\") amb la vostra ROM. Potser que la intal·lació de l\'Xposed no funcioni o causar problemes greus. Feu clic aquí per a més detalls del problema.</string>
     <string name="install_reverted">S\'ha instal·lat prèviament l\'app_process versió \"%1$s\" però ara s\'ha trobat la versió \"%2$s\". Si no esperàveu que es restaurés un fitxer antic potser voldreu intentar la instal·lació en mode recuperació (automàtica o manual).</string>
