--- a/app/src/main/res/values-ca/strings.xml
+++ b/app/src/main/res/values-ca/strings.xml
@@ -23,7 +23,7 @@
     <string name="tabLogs">Registres</string>
     <string name="tabLogsDescription">Mostra i desa/envia els registres del marc Xposed.</string>
     <string name="tabAbout">Quant a</string>
-    <string name="tabAboutDescription">Informeu-vos de la gent que ha creat l\'Xposed, d'on aconseguir ajuda per a aquesta app...</string>
+    <string name="tabAboutDescription">Informeu-vos de la gent que ha creat l\'Xposed, d\'on aconseguir ajuda per a aquesta app...</string>
 
     <!-- navigation view items -->
     <string name="nav_item_install">Marc</string>
@@ -49,7 +49,7 @@
     <string name="phone_not_compatible">L\'Xposed (encara) no és compatible amb Android SDK versió %1$d o l\'arquitectura del processador (%2$s).</string>
     <string name="not_tested_but_compatible">L\'Xposed no s\'ha provat amb Android SDK versió %d, peró sembla compatible. Podeu provar d\'instal·lar-lo si voleu córrer el risc.</string>
     <string name="reboot_failed">Ha fallat el reinici. Utilitzeu la funció normal de reinici del dispositiu.</string>
-    <string name="auto_flash_note">S\'hauria d'instal·lar automàticament %s quan premeu \"D\'acord\".</string>
+    <string name="auto_flash_note">S\'hauria d\'instal·lar automàticament %s quan premeu \"D\'acord\".</string>
     <string name="manual_flash_note">Instal·leu %s des de la targeta SD card per acabar l\'operació.</string>
     <string name="reboot_confirmation">Voleu reiniciar ara?</string>
     <string name="reboot_recovery_confirmation">Voleu reiniciar en mode recuperació ara?</string>
