--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -305,5 +305,6 @@
     <string name="ignore_updates">Ignore update</string>
     <string name="ignore_updates_summ">Ignore updates for a specific module.</string>
     <string name="reboot_recovery">Reboot to recovery</string>
+    <string name="loading">Loading…</string>
 
 </resources>
