--- a/app/src/main/res/values-sk/strings.xml
+++ b/app/src/main/res/values-sk/strings.xml
@@ -305,5 +305,8 @@
     <string name="ignore_updates">Ignorovať auktualizácie</string>
     <string name="ignore_updates_summ">Ignorovať auktualizácie pre konkrétny modul.</string>
     <string name="reboot_recovery">Reštartovať do recovery</string>
+    <string name="loading">Načítavanie…</string>
+    <string name="chrome_custom_tabs">Chrome Custom Tabs</string>
+    <string name="chrome_custom_tabs_summ">Otvoriť odkazy v internom prehliadači</string>
 
 </resources>
